eck-perflab/litmus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litmus-ingress
  namespace: litmus
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "*.us-east-2.elb.amazonaws.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: chaos-litmus-frontend-service
                port:
                  number: 9091
